syntax = "proto3";

package wres.statistics.generated;

import "wresproto/metric_name.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "BoxplotMetricProto";
option java_multiple_files = true;

message BoxplotMetric
{
    // A message that encapsulates a box plot metric.

    MetricName name = 1;    
    // Metric name.
    
    repeated double quantiles = 2;
    // The quantiles at which the whiskers are defined.

    enum LinkedValueType
    {
        //The type of value linked to each box.
        
        NONE = 0;
        OBSERVED_VALUE = 1;
        FORECAST_VALUE = 2;
        ENSEMBLE_MEAN = 3;
        ENSEMBLE_MEDIAN = 4;
    }

    LinkedValueType linked_value_type = 3;
    /*The type of value linked to each box. For example,
    when plotting boxes by observed value, this is 
    LinkedValueType.OBSERVED_VALUE.*/

    enum QuantileValueType
    {
        //The type of value to which the quantiles refer.
        
        FORECAST = 0;
        FORECAST_ERROR = 1;
        ERROR_PERCENT_OF_VERIFYING_VALUE = 2;
        STATISTIC = 3;
        // A statistic whose corresponding metric name is provided in 
        // the statistic field.
    }

    QuantileValueType quantile_value_type = 4;
    // The type of quantile value.

    string units = 5;
    // Units of the quantiles.
    
    double optimum = 6; 
    // Optimum value.
    
    double minimum = 7;
    // The lower bound of the quantiles.

    double maximum = 8;
    // The upper bound of the quantiles.

    MetricName statistic_name = 9;
    // If this box plot is summarizing a distribution of raw statistics, this 
    // field contains the name of the raw metric being summarized. For 
    // example, if the mean error is calculated across geographic features and 
    // its distribution is summarized with a box plot, then the metric in this 
    // context is the mean error.

    string statistic_component_name = 10;
    // The name of the metric component being summarized.
}